# ribit

./: Cargo.toml  flake.nix  rustfmt.toml
crates/asm/: Cargo.toml
crates/asm/src/: lib.rs  parse.rs
crates/asm/src/parse/: instruction.rs  tests.rs  word.rs
crates/core/: Cargo.toml
crates/core/src/: disassemble.rs  instruction.rs  lib.rs  opcode.rs  register.rs
crates/decode/: Cargo.toml
crates/decode/src/: compressed.rs  from_instruction.rs  imm.rs  lib.rs
crates/encode/: Cargo.toml
crates/encode/src/: compressed.rs  lib.rs
crates/fuzz/: Cargo.toml
crates/fuzz/dict/: ribit-asm  ribit-decode
crates/fuzz/fuzz_targets/: asm-fuzz.rs  ribit-ssa-lower-fuzz.rs  ssa-lower-fuzz.rs
crates/hashify2/: Cargo.toml
crates/hashify2/src/: lib.rs  model.rs
crates/jit/: Cargo.toml
crates/jit/src/: lib.rs  rt.rs  sbi.rs
crates/jit/src/rt/: interpreter.rs  x86_64.rs
crates/jit/src/rt/x86_64/: generator.rs  ir.rs  legalise.rs  register_alloc.rs  rt.rs
crates/jit/src/rt/x86_64/generator/: cmp.rs  math.rs  memory.rs
crates/jit/src/rt/x86_64/ir/: instruction.rs  lower.rs  memory.rs  register.rs
crates/ribit/: Cargo.toml
crates/ribit/src/: lib.rs  main.rs
crates/ssa/: Cargo.toml
crates/ssa/src/: analysis.rs  block.rs  eval.rs  icmp.rs  id.rs  instruction.rs  lib.rs  lower.rs  opt.rs  reference.rs  source.rs  tests.rs  ty.rs
doc/: jit.txt
fuzz/: Cargo.toml
ribit-asm/: Cargo.toml
ribit-asm/src/: lib.rs  parse.rs
ribit-asm/src/parse/: instruction.rs  tests.rs
ribit-core/: Cargo.toml
ribit-core/src/: decode.rs  disassemble.rs  instruction.rs  lib.rs  opcode.rs  register.rs
ribit-core/src/decode/: compressed.rs
ribit-decode/: Cargo.toml
ribit-decode/src/: compressed.rs  error.rs  from_instruction.rs  lib.rs
ribit-encode/: Cargo.toml
ribit-jit/: Cargo.toml
ribit-jit/src/: context.rs  generator.rs  legalise.rs  lib.rs  rt.rs  sbi.rs  x86_64.rs
ribit-jit/src/generator/: math.rs
ribit-jit/src/rt/: common.rs  interpreter.rs  x86_64.rs
ribit-jit/src/rt/x86_64/: generator.rs  legalise.rs  register_alloc.rs  rt.rs
ribit-jit/src/rt/x86_64/generator/: cmp.rs  math.rs
ribit-jit/src/snapshots/: ribit_jit__legalise__test__legalise_max.snap  ribit_jit__register_alloc__test__alloc_max-2.snap  ribit_jit__register_alloc__test__alloc_max.snap
ribit-jit/src/x86_64/: generator.rs  legalise.rs  register_alloc.rs  rt.rs
ribit-jit/src/x86_64/generator/: cmp.rs  math.rs  memory.rs
ribit-jit/src/x86_64/snapshots/: ribit_jit__x86_64__legalise__test__legalise_max.snap  ribit_jit__x86_64__register_alloc__test__alloc_max-2.snap  ribit_jit__x86_64__register_alloc__test__alloc_max.snap
ribit-ssa/: Cargo.toml
ribit-ssa/src/: analysis.rs  block.rs  eval.rs  id.rs  instruction.rs  lib.rs  lower.rs  opt.rs  reference.rs  source.rs  tests.rs  ty.rs
ribit-ssa/src/instruction/: ext_int.rs  select.rs  tests.rs
ribit-ssa/src/lower/: test.rs
ribit-ssa/src/lower/snapshots/: ribit_ssa__lower__test__addi_no_dest.snap  ribit_ssa__lower__test__addi_no_src.snap  ribit_ssa__lower__test__addi_nop.snap  ribit_ssa__lower__test__branch_0_0_eq.snap  ribit_ssa__lower__test__branch_0_x1_eq.snap  ribit_ssa__lower__test__jal_basic.snap  ribit_ssa__lower__test__jalr_bit.snap  ribit_ssa__lower__test__jalr_link_eq_src.snap  ribit_ssa__lower__test__jalr_pc.snap  ribit_ssa__lower__test__mem_read_write.snap  ribit_ssa__lower__test__sys_break.snap
ribit-ssa/src/opt/: const_prop.rs  dead_instruction_elimination.rs  pass_manager.rs  register_writeback_shrinking.rs  tests.rs
ribit-ssa/src/opt/const_prop/: basic.rs
ribit-ssa/src/snapshots/: ribit_ssa__analysis__test__dead_reads_give_valid_lifetimes.snap  ribit_ssa__analysis__test__max_lifetimes.snap  ribit_ssa__lower__test__addi_no_dest.snap  ribit_ssa__lower__test__addi_no_src.snap  ribit_ssa__lower__test__addi_nop.snap  ribit_ssa__lower__test__branch_0_0_eq.snap  ribit_ssa__lower__test__branch_0_x1_eq.snap  ribit_ssa__lower__test__jal_basic.snap  ribit_ssa__lower__test__jalr_bit.snap  ribit_ssa__lower__test__jalr_link_eq_src.snap  ribit_ssa__lower__test__jalr_pc.snap  ribit_ssa__lower__test__mem_read_write.snap  ribit_ssa__lower__test__sys_break.snap  ribit_ssa__opt__test__jal_basic_const_prop.snap  ribit_ssa__opt__test__jal_basic_die.snap  ribit_ssa__opt__test__max.snap  ribit_ssa__opt__test__max_opt_bf_bb_1.snap  ribit_ssa__opt__test__mem_read_write_all_opts.snap
ribit-ssa/src/ty/: bitness.rs
src/: decode.rs  disassemble.rs  instruction.rs  jit.rs  lib.rs  main.rs  opcode.rs  register.rs  ssa.rs
src/decode/: compressed.rs
src/jit/: alloc.rs  context.rs  generator.rs  legalise.rs  register_alloc.rs
src/jit/generator/: branch.rs  cmp.rs  math.rs  memory.rs
src/jit/snapshots/: ribit__jit__legalise__test__legalise_max.snap  ribit__jit__register_alloc__test__alloc_max-2.snap  ribit__jit__register_alloc__test__alloc_max.snap  test__alloc_max-2.snap  test__alloc_max.snap  test__legalise_max.snap
src/ssa/: analysis.rs  eval.rs  lower.rs  opt.rs
src/ssa/snapshots/: ribit__ssa__analysis__test__dead_reads_give_valid_lifetimes.snap  ribit__ssa__analysis__test__max_lifetimes.snap  ribit__ssa__lower__test__addi_no_dest.snap  ribit__ssa__lower__test__addi_no_src.snap  ribit__ssa__lower__test__addi_nop.snap  ribit__ssa__lower__test__branch_0_0_eq.snap  ribit__ssa__lower__test__branch_0_x1_eq.snap  ribit__ssa__lower__test__jal_basic.snap  ribit__ssa__lower__test__jalr_bit.snap  ribit__ssa__lower__test__jalr_link_eq_src.snap  ribit__ssa__lower__test__jalr_pc.snap  ribit__ssa__lower__test__mem_read_write.snap  ribit__ssa__lower__test__sys_break.snap  ribit__ssa__opt__test__jal_basic_const_prop.snap  ribit__ssa__opt__test__jal_basic_die.snap  ribit__ssa__opt__test__max.snap  ribit__ssa__opt__test__max_opt_bf_bb_1.snap  ribit__ssa__opt__test__mem_read_write_all_opts.snap  test__addi_no_dest.snap  test__addi_no_src.snap  test__addi_nop.snap  test__branch_0_0_eq.snap  test__branch_0_x1_eq.snap  test__jal_basic.snap  test__jal_basic_const_prop.snap  test__jalr_bit.snap  test__jalr_pc.snap  test__max.snap  test__max_analysis.snap  (+3 more)
(+15 files in other folders)
