[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Skyler Ross <orangesnowfox@gmail.com>"]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
expect-test = "1.2.1"
log = "0.4.8"
ribit-asm.path = "crates/asm"
ribit-core.path = "crates/core"
ribit-decode.path = "crates/decode"
ribit-jit.path = "crates/jit"
ribit-ssa.path = "crates/ssa"
