[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Skyler Ross <orangesnowfox@gmail.com>"]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
expect-test = "1.2.1"
ribit-asm.path = "crates/asm"
ribit-core.path = "crates/core"
ribit-decode.path = "crates/decode"
ribit-encode.path = "crates/encode"
ribit-jit.path = "crates/jit"
ribit-ssa.path = "crates/ssa"

# git dep is a patch until the next version of `tracing-subscriber` releases with `matchers@0.2.0`
[workspace.dependencies.tracing]
default-features = false
git = "https://github.com/tokio-rs/tracing"
rev = "6e70c571d319a033d5f37c885ccf99aa675a9eac"

[workspace.dependencies.tracing-subscriber]
default-features = false
features = ["fmt"]
git = "https://github.com/tokio-rs/tracing"
rev = "6e70c571d319a033d5f37c885ccf99aa675a9eac"


[profile.profiling]
debug = true
inherits = "release"
