[package]
name = "ribit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ribit-asm]
path = "../ribit-asm"

[[bin]]
name = "ribit-asm-fuzz"
path = "fuzz_targets/ribit-asm-fuzz.rs"
test = false
doc = false
bench = false
