[package]
name = "ribit-jit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rasen = { git = "https://github.com/izik1/rasen", rev = "f043eaf960703c671b9523b15a727cab8033d783" }
memmap = "0.7.0"
raw-cpuid = "9.0.0"
static_assertions = "1.1.0"

[dev-dependencies]
insta = { version = "1.7.0" }
serde = "1.0.104"

[dependencies.ribit-core]
path = "../ribit-core"

[dependencies.ribit-ssa]
path = "../ribit-ssa"

