[package]
name = "ribit-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rasen = { git = "https://github.com/izik1/rasen", rev = "f043eaf960703c671b9523b15a727cab8033d783" }
memmap2 = "0.5.0"
static_assertions = "1.1.0"

[dev-dependencies]
expect-test = "1.2.1"
ribit-asm = { path = "../ribit-asm" }

[dependencies.ribit-core]
path = "../ribit-core"

[dependencies.ribit-ssa]
path = "../ribit-ssa"

