[package]
name = "ribit-ssa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dependencies.ribit-core]
path = "../ribit-core"

[dev-dependencies]
insta = { version = "1.7.0" }
serde = "1.0.104"
