[package]
name = "ribit-ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dependencies.ribit-core]
path = "../ribit-core"

[dev-dependencies]
expect-test = "1.2.1"

[dev-dependencies.ribit-decode]
path = "../ribit-decode"

[dev-dependencies.ribit-asm]
path = "../ribit-asm"
