[package]
authors.workspace = true
edition.workspace = true
name = "ribit-asm"
publish.workspace = true
version.workspace = true

[dependencies]
hashify2.workspace = true
ribit-core.workspace = true

[dev-dependencies]
expect-test.workspace = true

[dev-dependencies.ribit-core]
features = ["disassemble"]
workspace = true
