[package]
authors.workspace = true
edition.workspace = true
name = "ribit-fuzz"
publish.workspace = true
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ribit-asm.workspace = true

[[bin]]
bench = false
doc = false
name = "ribit-asm-fuzz"
path = "fuzz_targets/ribit-asm-fuzz.rs"
test = false
