[package]
authors.workspace = true
edition.workspace = true
name = "ribit-fuzz"
publish.workspace = true
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.9.1"
ribit-asm.workspace = true
ribit-decode.workspace = true
ribit-encode.workspace = true
ribit-ssa.workspace = true

[dependencies.ribit-core]
features = ["disassemble"]
workspace = true

[[bin]]
bench = false
doc = false
name = "ribit-asm-fuzz"
path = "fuzz_targets/ribit-asm-fuzz.rs"
test = false


[[bin]]
bench = false
doc = false
name = "ribit-ssa-lower-fuzz"
path = "fuzz_targets/ribit-ssa-lower-fuzz.rs"
test = false
