[package]
authors.workspace = true
edition.workspace = true
name = "ribit-jit"
publish.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
memmap2 = "0.9.4"
rasen = { git = "https://github.com/izik1/rasen", rev = "f043eaf960703c671b9523b15a727cab8033d783" }
ribit-core.workspace = true
ribit-ssa.workspace = true
static_assertions = "1.1.0"

[dev-dependencies]
expect-test.workspace = true
ribit-asm.workspace = true
