[package]
authors.workspace = true
edition.workspace = true
name = "ribit-jit"
publish.workspace = true
version.workspace = true

[dependencies]
tracing.workspace = true
memmap2 = "0.9.4"
rasen = { git = "https://github.com/izik1/rasen", rev = "014e808be9d4b3ac7be2f7a71097cf60c85cf704" }
ribit-core.workspace = true
ribit-ssa.workspace = true

[dev-dependencies]
expect-test.workspace = true
ribit-asm.workspace = true
