[package]
authors.workspace = true
description = "A Risc-V 32i-mc JIT"
edition = "2021"
name = "ribit"
version.workspace = true

[dependencies]
log.workspace = true
ribit-decode.workspace = true
ribit-jit.workspace = true
ribit-ssa.workspace = true
xmas-elf = "0.10.0"

[dependencies.env_logger]
default-features = false
features = ["color", "auto-color", "humantime"]
# frustratingly `humantime` got replaced with `jiff` which adds serde->serde_derive->syn/quote/proc-macro 2.
version = "=0.11.5"

[dependencies.ribit-core]
features = ["disassemble"]
workspace = true
