[package]
authors.workspace = true
description = "A Risc-V 32i-mc JIT"
edition = "2021"
name = "ribit"
version.workspace = true

[dependencies]
ribit-decode.workspace = true
ribit-jit.workspace = true
ribit-ssa.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xmas-elf = "0.10.0"

[features]
env-filter = ["tracing-subscriber/env-filter"]


[dependencies.ribit-core]
features = ["disassemble"]
workspace = true
